[package]
name = "malware"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winreg = "0.50"
rsa = "0.9.2" #rsa module
num-bigint = "0.4.3" #rsa module
rand = "0.8.5" #rsa module
aes = "0.8.3"
generic-array = "0.14.7"